- Created the LIB GRASSLYLIB to have the business logic and access to the database. - Add a Gridview and styled it.

--- a/GRASSLY/GRASSLY/GRASSLY.csproj
+++ b/GRASSLY/GRASSLY/GRASSLY.csproj
@@ -44,6 +44,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="GRASSLYLIB">
+      <HintPath>..\..\GRASSLYLIB\GRASSLYLIB\bin\Debug\GRASSLYLIB.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
