--- a/GRASSLY/GRASSLY/bin/GRASSLY.dll.config
+++ b/GRASSLY/GRASSLY/bin/GRASSLY.dll.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   https://go.microsoft.com/fwlink/?LinkId=169433
@@ -36,6 +36,9 @@
     <add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
   </appSettings>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\Users.mdf;Initial Catalog=Users;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\Users.mdf;Initial Catalog=Users;Integrated Security=True"
+      providerName="System.Data.SqlClient" />
+    <add name="ConnectionString" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\Emmas.mdf;Integrated Security=True"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
