1-Changed the navbar (Evryone should replace the new navbar) 2-Finished the login page 3-Finished the register page

--- a/GRASSLY/GRASSLY/GRASSLY.csproj
+++ b/GRASSLY/GRASSLY/GRASSLY.csproj
@@ -125,6 +125,7 @@
     <Content Include="Main.aspx" />
     <Content Include="Management.aspx" />
     <Content Include="Register.aspx" />
+    <Content Include="Styles.css" />
     <Content Include="test.aspx" />
     <Content Include="Web.config" />
     <Content Include="Welcome.aspx" />
