--- a/GRASSLY/GRASSLY/GRASSLY.csproj
+++ b/GRASSLY/GRASSLY/GRASSLY.csproj
@@ -117,6 +117,7 @@
     </Content>
     <Content Include="Customer.aspx" />
     <Content Include="CustomerCreate.aspx" />
+    <Content Include="CustomerOrderSearch.aspx" />
     <Content Include="Default.aspx" />
     <Content Include="Employee.aspx" />
     <Content Include="EmployeeCreate.aspx" />
@@ -124,6 +125,7 @@
     <Content Include="Login.aspx" />
     <Content Include="Main.aspx" />
     <Content Include="Management.aspx" />
+    <Content Include="PlaceOrder.aspx" />
     <Content Include="Register.aspx" />
     <Content Include="test.aspx" />
     <Content Include="Web.config" />
@@ -143,6 +145,13 @@
     </Compile>
     <Compile Include="CustomerCreate.aspx.designer.cs">
       <DependentUpon>CustomerCreate.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="CustomerOrderSearch.aspx.cs">
+      <DependentUpon>CustomerOrderSearch.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="CustomerOrderSearch.aspx.designer.cs">
+      <DependentUpon>CustomerOrderSearch.aspx</DependentUpon>
     </Compile>
     <Compile Include="Default.aspx.cs">
       <DependentUpon>Default.aspx</DependentUpon>
@@ -188,6 +197,13 @@
     </Compile>
     <Compile Include="Management.aspx.designer.cs">
       <DependentUpon>Management.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="PlaceOrder.aspx.cs">
+      <DependentUpon>PlaceOrder.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="PlaceOrder.aspx.designer.cs">
+      <DependentUpon>PlaceOrder.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Register.aspx.cs">
