1- Fixed the Footer to stay always in the bottom and applied them to all the pages so copy the new footer for new pages. 2-Fixed Gridview and design issues in Customer and Employee pages

--- a/GRASSLY/GRASSLY/GRASSLY.csproj
+++ b/GRASSLY/GRASSLY/GRASSLY.csproj
@@ -127,6 +127,7 @@
     <Content Include="Management.aspx" />
     <Content Include="PlaceOrder.aspx" />
     <Content Include="Register.aspx" />
+    <Content Include="StickyFooter.css" />
     <Content Include="Styles.css" />
     <Content Include="test.aspx" />
     <Content Include="Web.config" />
