--- a/.gitignore
+++ b/.gitignore
@@ -3,9 +3,9 @@
 
 # User-specific files
 *.suo
-#*.user
-#*.userosscache
-#*.sln.docstates
+*.user
+*.userosscache
+*.sln.docstates
 
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
@@ -15,15 +15,15 @@
 #[Dd]ebugPublic/
 #[Rr]elease/
 #[Rr]eleases/
-#x64/
-#x86/
-#bld/
-#[Bb]in/
-#[Oo]bj/
-#[Ll]og/
+x64/
+x86/
+bld/
+[Bb]in/
+[Oo]bj/
+[Ll]og/
 
 # Visual Studio 2015 cache/options directory
-#.vs/
+.vs/
 # Uncomment if you have tasks that create the project's static files in wwwroot
 #wwwroot/
 
@@ -211,8 +211,8 @@ UpgradeLog*.XML
 UpgradeLog*.htm
 
 # SQL Server files
-#*.mdf
-#*.ldf
+*.mdf
+*.ldf
 
 # Business Intelligence projects
 *.rdl.data
